# neat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
analysis/: main.py  output.txt
examples/: flappy.rs  sin-no-gui.rs  sin.rs  xor-no-gui.rs  xor.rs
examples/helper/: cli.rs  fitness_plot.rs  graph_visual.rs  main_layout.rs  mod.rs  opencolor.rs  plot.rs  text.rs
examples/helper/flappy/: mod.rs
params/: flappy.toml  sin.toml  xor.toml
src/: activations.rs  edge.rs  edge_data.rs  innovation_record.rs  lib.rs  main.rs  network.rs  network_internal.rs  node.rs  node_data.rs  node_kind.rs  parameters.rs  pool.rs  specie.rs  species.rs
src/network/: feedforward.rs  mod.rs  network_graph.rs
