[package]
name = "neat"
version = "0.1.0"
authors = ["Suh Donghwi <hwidongsuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
rand = "0.8.3"
log = "0.4.14"
env_logger = "0.8.3"

[lib]
name = "neatlib"
path = "src/lib.rs"

[[bin]]
name = "neatbin"
path = "src/bin/main.rs"