[package]
name = "neat"
version = "0.1.0"
authors = ["Suh Donghwi <hwidongsuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
rand = "0.8.3"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
float-cmp = "0.8.0"
indoc = "1.0"

[dev-dependencies]
ggez = "0.5"

[lib]
name = "neat"
path = "src/lib.rs"

[[example]]
name = "xor"