[package]
name = "neat"
version = "0.1.0"
authors = ["Suh Donghwi <hwidongsuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
indoc = "1.0"

[dev-dependencies]
clap = "2.33.3"
toml = "0.5.8"
ggez = "0.5"
float-cmp = "0.8.0"
lazy_static = "1.4.0"

[lib]
name = "neat"
path = "src/lib.rs"
